<resources>
    <string name="app_name">TugasBesar01</string>
    <string name="makan_apa">Makan Apa</string>
    <string name="makan_apa_hari_ini">Makan Apa Hari ini?</string>
    <string name="cari">Cari</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="openDrawer">buka</string>
    <string name="closeDrawer">tutup</string>
    <string name="submit">submit</string>

    <string name="hari_ini">Hari Ini?</string>

</resources>