<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/home"/>

        <TextView
            android:id="@+id/tvCari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cari"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/tvExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/exit"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textSize="18sp">
        </TextView>


    </LinearLayout>


</RelativeLayout>